# pykinesis

./: MANIFEST.in  README.md  pyproject.toml
.github/workflows/: deployment.yml
examples/: example_kcube_solenoid.py
pykinesis/: __init__.py  kcube_solenoid.py
pykinesis/core/: _errors.py  _kcube_solenoid.py
