[build-system]
requires = ["setuptools >= 64", "setuptools-git-versioning >= 2.0, < 3"]
build-backend = "setuptools.build_meta"

[project]
name = "pykinesis"
dynamic = ["version"]
description = "Python binding for the Thorlabs Kinesis software"
authors = [
	{ name = "Francois Margall", email = "fr.margall@proton.me" },
]
readme = "README.md"
keywords = ["binding", "thorlabs", "kinesis", "sdk", "optics", "kcube"]
classifiers = [
	"Development Status :: 3 - Alpha",
	"License :: OSI Approved :: MIT License",
	"Operating System :: Microsoft :: Windows",
]

[project.urls]
Repository = "https://github.com/fmargall/pykinesis.git"
Tracker = "https://github.com/fmargall/pykinesis/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pykinesis*"]

[tool.setuptools.package-data]
pykinesis = [
	"dependencies/Windows/x64/Thorlabs.MotionControl.DeviceManager.dll",
    "dependencies/Windows/x64/Thorlabs.MotionControl.KCube.Solenoid.dll"
]

[tool.setuptools-git-versioning]
enabled = true
dirty_template = "{tag}"